# jk2mv

./: CMakeLists.txt  mv_setup.h
libs/libmad/: CMakeLists.txt
libs/libmad/include/: mad.h
src/: CMakeLists.txt
src/api/: mvapi.h
src/cgame/: tr_types.h
src/client/: FXExport.cpp  FXExport.h  FxPrimitives.cpp  FxPrimitives.h  FxScheduler.cpp  FxScheduler.h  FxSystem.cpp  FxSystem.h  FxUtil.cpp  cl_cgame.cpp  cl_cin.cpp  cl_console.cpp  cl_demos.cpp  cl_demos.h  cl_demos_auto.cpp  cl_demos_cut.cpp  cl_keys.cpp  cl_main.cpp  cl_mme.cpp  cl_parse.cpp  cl_scrn.cpp  cl_ui.cpp  client.h  snd_dma.cpp  snd_local.h  snd_main.cpp  snd_mem.cpp  snd_mix.cpp  snd_mix.h  snd_mme.cpp  snd_public.h
src/menu/: ui_local.h  ui_main.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.c
src/qcommon/: common.cpp  files.cpp  q_math.cpp  q_shared.cpp  q_shared.h  qcommon.h  qfiles.h  tags.h
src/renderer/: glext.h  qgl.h  tr_backend.cpp  tr_cmds.cpp  tr_flares.cpp  tr_font.cpp  tr_font.h  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_mesh.cpp  tr_mme.cpp  tr_mme.h  tr_mme_avi.cpp  tr_mme_common.cpp  tr_mme_stereo.cpp  tr_model.cpp  tr_noise.cpp  tr_public.h  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_sky.cpp  tr_surface.cpp  tr_surfacesprites.cpp  tr_world.cpp
src/sdl/: sdl_input.cpp  sdl_sound.cpp  sdl_window.cpp
src/server/: sv_ccmds.cpp
src/sys/: sys_main.cpp  sys_public.h  sys_win32.cpp
tools/: FindMAD.cmake
